# youtube-transcription

./: .env.sample  .gitignore  README.md  package.json  pyproject.toml
.flox/: env.json
.flox/env/: manifest.toml
src/: main.py
src/youtube_transcriber/config/: settings.py
src/youtube_transcriber/core/: downloader.py  transcriber.py
src/youtube_transcriber/utils/: audio_utils.py  gcs_utils.py
transcriptions/: فتعلمنا الإيمان | البناء المنهجي | أحمد السيد_transcription.txt
